fix text-align in socialize block #222

--- a/drupal/sites/all/themes/antistatique/assets/sass/organisms/_socialize.scss
+++ b/drupal/sites/all/themes/antistatique/assets/sass/organisms/_socialize.scss
@@ -73,6 +73,7 @@
         vertical-align: middle;
         padding-left: 10px;
         font-size: $font-size-base * 0.9;
+        text-align: left;
       }
     }
   }
